--- a/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
+++ b/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
@@ -32,8 +32,8 @@
       label="Efetuar Venda"
       icon="pi pi-credit-card"
       styleClass="bg-indigo-800 p-button-secondary"
-      routerLink="/efetuar-venda"
-      routerLinkActive="exact_route">
+      routerLink="/products"
+      (onClick)="saleProduct()">
     </p-button>
   </div>
 
