--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,6 +97,11 @@
     outline: 0;
   }
 
+  body {
+    margin-top: 0;
+    margin-bottom: 0  ;
+  }
+
   /* HTML5 display-role reset for older browsers */
   article,
   aside,
@@ -170,4 +175,11 @@
   :host ::ng-deep .p-dropdown {
     width: 50%;
   }
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
