--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -12,10 +12,10 @@
 
           <!-- EMAIL -->
           <div class="flex justify-content-center align-content-center text-align-center">
-            <input type="email" pInputText placeholder="Email" formControlName="email">
+            <input #inputEmail type="email" pInputText placeholder="Email" formControlName="email">
           </div>
           <!-- SENHA -->
-          <div class="flex justify-content-center align-content-center text-align-center mt-3">
+          <div #inputPassword class="flex justify-content-center align-content-center text-align-center mt-3">
             <input type="password" pInputText placeholder="Senha" formControlName="password">
           </div>
           <!-- BTN LOGIN -->
